tests/negative/Internal/MultiWrongType.juvix
module MultiWrongType;
  inductive A {
    a : A;
  };

  inductive B {
    b : B;
  };

  f : A;
  f := b;

  g : B;
  g := a;
end;
